SpiderData/jianshu/Clean/01923.txt
使用yum命令报错:

File "/usr/bin/yum", line 30
except KeyboardInterrupt, e:
^
SyntaxError: invalid syntax

问题如下：

# vi /usr/bin/yum
#!/usr/bin/python2.7

修改urlgrabber-ext-down文件，更改python版本

# vi /usr/libexec/urlgrabber-ext-down
#!/usr/bin/python2.7

本人博客园地址。

